crates/zizmor/tests/integration/snapshots/integration__fix_format_json__multiple_files_produce_multiple_patches.snap
---
source: crates/zizmor/tests/integration/fix_format_json.rs
expression: "zizmor().input(input_under_test(\"artipacked.yml\")).input(input_under_test(\"template-injection.yml\")).args([\"--fix=all\",\n\"--fix-format=json\", \"--quiet\"]).run()?"
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:18:9
   |
18 |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not set persist-credentials: false
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:19:40
   |
16 |       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # tag=v7.0.1
   |         -------------------------------------------------------------------- action accepts arbitrary code
17 |         with:
18 |           script: |
   |           ------ via this input
19 |             return "doing a thing: ${{ github.event.issue.title }}"
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

4 findings (2 suppressed, 1 fixable): 0 informational, 0 low, 1 medium, 1 high
[
  {
    "file": "@@INPUT@@",
    "operations": [
      {
        "op": "add",
        "path": "/jobs/artipacked/steps/0/with",
        "value": {
          "persist-credentials": false
        }
      }
    ]
  }
]
